react tutorial first commit

--- a/learningJS-rishi/index.html
+++ b/learningJS-rishi/index.html
@@ -5,7 +5,7 @@
     <title>JavaScript Hello World Example</title>
     <script src="js/index.js"></script>
 </head>
-<body>
+<body style="background-color: black;">
     <button type="button" onclick="myFunction()">Set background color</button>
 </body>
 </html>
