--- a/learningJS-rishi/test template/index.html
+++ b/learningJS-rishi/test template/index.html
@@ -14,6 +14,18 @@
           margin: 4px 2px;
           cursor: pointer;
         }
+        .TaskButton {
+          background-color: #3b3588;
+          border: none;
+          color: rgb(190, 190, 190);
+          padding: 15px 32px;
+          text-align: center;
+          text-decoration: none;
+          display: inline-block;
+          font-size: 16px;
+          margin: 4px 2px;
+          cursor: pointer;
+        }
     </style>
     <meta charset="UTF-8">
     <title>PANEL test</title>
