added comments to index.js now lists.js. began work on timer.js

--- a/PANEL_APP/index.html
+++ b/PANEL_APP/index.html
@@ -5,6 +5,8 @@
     <title>PANEL test</title>
 </head>
 <body style="background-color: gray;">
-  <script src="js/index.js"></script>
+  <script src="js/lists.js"></script>
+  <script src="js/timer.js"></script>
+  <div> Work <span id="time">05:00</span> minutes!</div>
 </body>
 </html>
