testing on frank's indexes

--- a/learningJS-frank/index.html
+++ b/learningJS-frank/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>JavaScript Hello World Example</title>
-    <script src="index.js">
-    </script>
-</head>
-<body>
-</body>
+<html>
+
+  <body>
+    <container>
+
+
+      <div class="btn-group">
+        <button id="startTimer" onclick="startTimer.startTimer()">
+          Start
+        </button>
+
+        <button id="reset" onclick="resetTime()">
+          Reset
+        </button>
+      </div>
+
+      <div id="timer">
+        00:00
+      </div>
+
+    </container>
+  </body>
+
 </html>
