--- a/PANEL_APP/main.html
+++ b/PANEL_APP/main.html
@@ -18,9 +18,25 @@
   <!-- start timer button -->
   <span id="count">5</span> seconds
   <br>
-  <button onclick="start()">
+  <button onclick="startTimer()">
   START
   </button>
+
+  <div class="btn-group">
+    <button id="startTimer" onclick="startTimer()">
+      Start
+    </button>
+
+    <button id="reset" onclick="resetTime()">
+      Reset
+    </button>
+  </div>
+
+  <div id="timer">
+    00:00
+  </div>
+
+
 
 </body>
 </html>
