--- a/learningJS-frank/index.html
+++ b/learningJS-frank/index.html
@@ -2,10 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>JavaScript Hello World Example</title>
-    <script src="index.js">
-    </script>
+    <!-- <meta http-equiv="X-UACompatible" content="IE=edge"> -->
+    <!-- sets interface to be formatted to size of the device https://www.w3schools.com/css/css_rwd_viewport.asp -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Countdown Timer</title>
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
+
 </head>
 <body>
+    <div class="timer">
+    </div>
+
+    <script src="main.js"></script>
 </body>
 </html>
