--- a/learningJS-frank/index.html
+++ b/learningJS-frank/index.html
@@ -13,8 +13,7 @@
 
 </head>
 <body>
-    <div class="timer">
-    </div>
+    <div class="timer"></div>
 
     <script src="main.js"></script>
 </body>
