delete options available

--- a/PANEL_APP/main.html
+++ b/PANEL_APP/main.html
@@ -18,7 +18,7 @@
   <script src="js/timer.js"></script>
 
   
-  <!-- start timer button 
+  <!-- start timer button -->
   <span id="count">5</span> seconds
   <br>
   <button onclick="startTimer()">
@@ -37,7 +37,7 @@
 
   <div id="timer">
     00:00
-  </div> --> 
+  </div>
 
 
 
