--- a/learningJS-frank/index.html
+++ b/learningJS-frank/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- <meta http-equiv="X-UACompatible" content="IE=edge"> -->
+    <meta http-equiv="X-UACompatible" content="IE=edge">
     <!-- sets interface to be formatted to size of the device https://www.w3schools.com/css/css_rwd_viewport.asp -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Countdown Timer</title>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="timer.css">
 
 </head>
 <body>
     <div class="timer"></div>
 
-    <script src="main.js"></script>
+    <script src="timer.js"></script>
 </body>
 </html>
