--- a/learningJS-frank/index.html
+++ b/learningJS-frank/index.html
@@ -10,11 +10,18 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="timer.css">
+    <link rel="stylesheet" href="buttons.css">
 
 </head>
 <body>
     <div class="timer"></div>
+    <div class="timer"></div>
+    <div class="timer"></div>
 
-    <script src="timer.js"></script>
+    <input type="button" class="createTimer" value="Create a Study Mode timer">
+
+    <script src="js/timer.js"></script>
+    <script src="js/buttons.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
