--- a/learningJS-frank/index.html
+++ b/learningJS-frank/index.html
@@ -13,7 +13,8 @@
 
 </head>
 <body>
-    <div class="timer"></div>
+    <div class="timer">
+    </div>
 
     <script src="main.js"></script>
 </body>
