--- a/learningJS-frank/index.html
+++ b/learningJS-frank/index.html
@@ -10,18 +10,17 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="timer.css">
-    <link rel="stylesheet" href="buttons.css">
+    <link rel="stylesheet" href="timer2.css">
 
 </head>
 <body>
     <div class="timer"></div>
-    <div class="timer"></div>
-    <div class="timer"></div>
+    <div class="timer2"></div>
 
     <input type="button" class="createTimer" value="Create a Study Mode timer">
 
     <script src="js/timer.js"></script>
-    <script src="js/buttons.js"></script>
+    <script src="js/timer2.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
