--- a/learningJS-frank/index.html
+++ b/learningJS-frank/index.html
@@ -13,8 +13,39 @@
 
 </head>
 <body>
-    <div class="timer"></div>
-    <div class="timer2"></div>
+    <div class="timer">
+        <p class="text">Work Timer</p>
+        <span class="timer__part timer__part--minutes">00</span>
+        <span class="timer__part">:</span>
+        <span class="timer__part timer__part--seconds">00</span>
+        <button type="button" class="timer__btn timer__btn--control timer__btn--start">
+            <span class="material-icons">
+                play_arrow
+            </span>
+        </button>
+        <button type="button" class="timer__btn timer__btn--reset">
+            <span class="material-icons">
+                timer
+                </span>
+        </button>
+    </div>
+    <div class="timer2">
+        <p class="text">Rest Timer</p>
+        <span class="timer__part timer__part--minutes">00</span>
+        <span class="timer__part">:</span>
+        <span class="timer__part timer__part--seconds">00</span>
+        <button type="button" class="timer__btn timer__btn--control timer__btn--start">
+            <span class="material-icons">
+                play_arrow
+            </span>
+        </button>
+        <button type="button" class="timer__btn timer__btn--reset">
+            <span class="material-icons">
+                timer
+                </span>
+        </button>
+    </div>
+    </div>
 
     <script src="js/timer.js"></script>
     <script src="js/main.js"></script>
