--- a/PANEL_APP/main.html
+++ b/PANEL_APP/main.html
@@ -9,7 +9,17 @@
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- connect to css files -->
-  <link rel="stylesheet" type="text/css" href="timer.css" />
+  <link rel="stylesheet" type="text/css" href="timer.css" /> 
+
+  <title>Calendar</title>
+  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  
+  <style>
+    
+  </style>
+
 </head>
 
 
@@ -55,6 +65,33 @@
   <script src="js/lists.js"></script>
   <script src="js/timer.js"></script>
   <script src="js/main.js"></script>  
+
+  <div class="container">
+    <div class="calendar">
+        <div class="month">
+           <i class="fas fa-angle-left 
+           prev"></i>
+           <div class="date">
+               <h1></h1>
+               <p></p>
+           </div>
+           <i class="fas fa-angle-right next"></i>
+        </div>
+        <div class="weekdays">
+            <div>Sun</div>
+            <div>Mon</div>
+            <div>Tue</div>
+            <div>Wed</div>
+            <div>Thu</div>
+            <div>Fri</div>
+            <div>Sat</div>
+        </div>
+        <div class="days">
+        </div>
+    </div>
+</div>
+
+<script src="js/calendar.js"></script> 
 
 </body>
 </html>
