Added calendar to interface and updated UI

--- a/PANEL_APP/main.html
+++ b/PANEL_APP/main.html
@@ -16,14 +16,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   
-  <style>
-    
-  </style>
-
 </head>
 
 
 <body>
+  <title>PANEL</title>
+
   <div id="context-menu">
     <div class="item" onclick="deleteList()">Delete List</div>
   </div>
