--- a/PANEL_APP/main.html
+++ b/PANEL_APP/main.html
@@ -11,6 +11,8 @@
   <!-- connect to css files -->
   <link rel="stylesheet" type="text/css" href="timer.css" /> 
 
+  <link rel="stylesheet" type="text/css" href="lists.css" />
+
   <title>Calendar</title>
   <link rel="stylesheet" href="style.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
